--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
       <nav class="header-novigation">
-        <a class="header-novigation-logo"href="./index.html"><span class="header-logo-italic">Web</span>Studio</a>
+        <a class="header-novigation-logo" href="./index.html"><span class="header-logo-italic">Studio</span>Web</a>
         <ul class="header-menu-list">
           <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
@@ -22,23 +22,23 @@
       <address class="header-address">
         <ul>
           <li>
-            <a class="header-address-contact"href="mailto:info@devstudio.com"> info@devstudio.com</a>
+            <a class="header-address-contact" href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
-          <li><a class="header-address-contact"href="tel :+110001111111"> +11 (000) 111-11-11</a></li>
+          <li> <a class="header-address-contact" href="tel:+110001111111"> +11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main class="main">
       <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="hero-order-btn"><p class="hero-order-text-btn">Order Service</p></button>
+        <button type="button" class="hero-order-btn">Order Service</button>
       </section>
       <section class="about-us">
         <h2 class="visually-hidden">ABOUT US</h2>
         <ul class="about-us-list">
           <li class="about-us-item">
             <h3 class="about-us-subtitle">Strategy</h3>
-            <p class="about-ua-item-text">
+            <p class="about-us-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p> 
@@ -118,7 +118,6 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img
-              class="image-banking"
               src="./images/imgg.jpg"
               alt="a lot of icons color purple"
               width="360"
@@ -130,7 +129,6 @@
           </li>
           <li class="portfolio-item">
             <img
-              class="image-cashless"
               src="./images/imgh.jpg"
               alt="mobile phone"
               width="360"
@@ -142,7 +140,6 @@
           </li>
           <li class="portfolio-item">
             <img
-              class="image-meditation"
               src="./images/imgj.jpg"
               alt="computer monitor"
               width="360"
@@ -155,7 +152,6 @@
           <li class="portfolio-item">
 
             <img
-              class="image-marketing"
               src="./images/imgk.jpg"
               alt="the driver's wheel"
               width="360"
@@ -167,7 +163,6 @@
           </li>
           <li class="portfolio-item">
              <img
-              class="image-screen"
               src="./images/imgl.jpg"
               alt="phone with image moon at the nigth"
               width="360"
@@ -179,7 +174,6 @@
           </li>
           <li class="portfolio-item">
              <img
-              class="image-courses"
               src="./images/imgx.jpg"
               alt="girl with phone"
               width="360"
@@ -193,7 +187,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html" ><span class="footer-logo-italic">Web</span>Studio</a>
+      <a class="footer-logo" href="./index.html" ><span class="footer-logo-italic">Studio</span>Web</a>
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
