--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
       <nav class="header-novigation">
-        <a class="header-novigation-logo" href="./index.html"><span class="header-logo-italic">Studio</span>Web</a>
+        <a class="header-novigation-logo" href="./index.html" target="parent"><span class="header-logo-italic">Studio</span>Web </a>
         <ul class="header-menu-list">
           <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
@@ -45,21 +45,21 @@
           </li>
           <li class="about-us-item">
             <h3 class="about-us-subtitle">Punctuality</h3>
-            <p class="about-ua-item-text">
+            <p class="about-us-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="about-us-item">
             <h3 class="about-us-subtitle">Diligence</h3>
-            <p class="about-ua-item-text">
+            <p class="about-us-item-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="about-us-item">
             <h3 class="about-us-subtitle">Technologie s</h3>
-            <p class="about-ua-item-text">
+            <p class="about-us-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
