--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
       <nav class="header-novigation">
-        <a class="header-novigation-logo" href="./index.html" target="_top"><span class="header-logo-italic">Studio</span>Web </a>
+        <a class="header-novigation-logo" href="./index.html" target="_self"><span class="header-logo-italic">Studio</span>Web </a>
         <ul class="header-menu-list">
           <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
