--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <header class="header">
       <nav class="header-novigation">
-        <a class="header-novigation-logo" href="#top./index.html"><span class="header-logo-italic">Studio</span>Web </a>
+        <a class="header-novigation-logo" href="./index.html"><span class="header-logo-italic">Studio</span>Web </a>
         <ul class="header-menu-list">
-          <li class="header-menu-item"><a class="header-menu-link" href="">Studio</a></li>
+          <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
         </ul>
