--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="header">
       <nav class="header-novigation">
-        <a class="header-novigation-logo" href="./index.html"><span class="header-logo-italic">Studio</span>Web </a>
+        <a class="header-novigation-logo" href="./index.html"><span class="header-logo-italic">Web</span>Studio</a>
         <ul class="header-menu-list">
           <li class="header-menu-item"><a class="header-menu-link" href="./index.html">Studio</a></li>
           <li class="header-menu-item"><a class="header-menu-link" href="">Portfolio</a></li>
